# Roads-Damages-Detector

./: CMakeLists.txt  CMakeLists.txt.user.701d444  README.md  Video3  qml.qrc
doc/: Product Requirements Document.md  Promotion of the Work.md  Raspberry Pi for Real Time Embedded Programming  Test Report.md  UML class.vsdx
doc/process/: Flowchart.pptx  Minutes of the Meeting.md  Plan.xlsx  Process Management.md  README.md  Shared Links.xlsx  flow chart.pptx  process.xlsx
form/: configpage.ui  homepage.ui  navigationbar.ui  resultpage.ui  settingpage.ui  tasklist.ui  window.ui
images/: photo1  photo2  photo5  photo7  photo8
media operation/: Video4  photo3  photo4  photo6  photo9
qml/: ConfigView.qml  CusTitleBar.qml  CusToolBar.qml  HomeView.qml  MainForm.qml  ResultView.qml  SettingView.qml  TaskListView.qml  main.qml
src/: CMakeLists.txt  configpage.cpp  configpage.h  framelesswindow.cpp  framelesswindow.h  homepage.cpp  homepage.h  main.cpp  monitor.cpp  monitor.h  navigationbar.cpp  navigationbar.h  qpaintitem.cpp  qpaintitem.h  resultpage.h  tasklist.cpp  tasklist.h  window.cpp  window.h
src/algorithm/: cusncnn.cpp  cusncnn.h
src/data/: resultlistdata.cpp  resultlistdata.h  tasklistdata.cpp  tasklistdata.h
src/driver/: camera.cpp  camera.h  gtu7.cpp  gtu7.h  rtcam.cpp  rtcam.h  serial.h  serial_linux.cpp  serial_win.cpp  serial_win.h
src/interface/: camera.h  gnss.h  imgrecog.h
src/model/: resultlistmodel.cpp  resultlistmodel.h  tasklistmodel.cpp  tasklistmodel.h
test/: CMakeLists.txt  gtest_camera.h  gtest_cusncnn.h  gtest_gtu7.h  gtest_resultlistdata.h  gtest_serial.h  gtest_serial_win.h  gtest_tasklistdata.h  main.cpp
tool/A flowchart of the code being referenced/: ConsoleApplication1_flowchart.pptx
tool/dl_test/: readme.md  yolov3tiny_v2_1.cpp
yolo_train/: readme.md
yolo_train/yolov5/: requirements.txt  roads_train.txt  roads_val.txt  train.py
yolo_train/yolov5/runs/train/exp41/exp41/: events.out.tfevents.1678282167.5b3fe016a9aa.5644.0  opt.yaml  results.csv
yolo_train/yolov5_lite/: roads_train.txt
yolo_train/yolov5_lite/runs/train/exp3/weights/: last.pt
yolo_training/: readme.md
yolo_training/YOLOv5-Lite-master/: readme.md  roads_val.txt
yolo_training/YOLOv5-Lite-master/data/: roads_damage.yaml
yolo_training/YOLOv5-Lite-master/runs/train/exp3/: events.out.tfevents.1679140501.f60c1c5b8e78.9521.0  opt.yaml  results.txt
yolo_training/YOLOv5-Lite-master/runs/train/exp3/weights/: best.pt
yolo_training/yolov5/: Readme_YOLOv5.docx  detect.py  export.py  roads_val.cache  val.py
yolo_training/yolov5/data/: coco128.yaml  face_mask.yaml  roads_damage.yaml
yolo_training/yolov5/data/labels/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  (+547 more)
yolo_training/yolov5/models/: common.py
